# data-tracker

./: Dockerfile  README.md  pyproject.toml
data_tracker/: __main__.py  config.py
data_tracker/server/: app.py  routes.py
data_tracker/server/controller/: price_controller.py
data_tracker/server/controller/stat/: ranker.py  stat_aggregator.py  stat_change_listener.py  stat_collector.py
data_tracker/server/dependencies/: singletons.py
data_tracker/server/model/exceptions/: api_exception.py
data_tracker/server/model/messages/: v1.py
data_tracker/server/worker/: crypto_update_worker.py
data_tracker/tests/: test_stat_collector.py
