[tool.poetry]
name = "data-tracker"
version = "0.1.0"
description = "Data tracker for Crypto"
authors = ["yzhishko <yzhishko@gmail.com>"]
readme = "README.md"
packages = [{include = "data_tracker"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi-versioning = "^0.10.0"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
dependency-injector = "^4.40.0"
APScheduler = "^3.9.1"
aiohttp = "^3.8.1"

[tool.poetry.scripts]
service = "data_tracker.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
